--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,9 +1,9 @@
 parameters:
-    database_driver   : pdo_mysql
+    database_driver   : pdo_sqlite
     database_host     : 127.0.0.1
     database_port     : ~
-    database_name     : symfony
-    database_user     : root
+    database_name     : ourss
+    database_user     : ourss
     database_password : ~
 
     locale            : en
